feat(folia): legacy sched-agent, teleport transactions, compat matrix
Ship Phase 2 Folia compat kernel: JVM -javaagent rewrites CraftScheduler.handle
so legacy BukkitScheduler sync calls route to Folia region schedulers; wire via
folia-sched-compat in FoliaKernel; add cross-region teleport transaction patch
and smoke gates. Teleport landed — Agent 3 clear for region work.